fix statusbar spacing for equipments

--- a/frontend/src/components/EquipmentItem/EquipmentItem.css
+++ b/frontend/src/components/EquipmentItem/EquipmentItem.css
@@ -38,5 +38,5 @@
 
 .equiptmentTitle {
     font-size: 20px;
-    margin-top: 21px;
+    margin-top: 10px;
 }
